# micro-ml

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
benchmarks/: benchmark.js  compare.js  package.json
crates/micro-ml-core/: Cargo.toml
crates/micro-ml-core/src/: dbscan.rs  decision_tree.rs  error.rs  exponential.rs  knn.rs  lib.rs  linear.rs  matrix.rs  pca.rs  polynomial.rs  svm.rs  timeseries.rs
docs/: basic.html  example.html  index.html  ml.html  usecases.html
examples/: basic.html
