[package]
name = "micro-ml-core"
version = "0.1.0"
edition = "2021"
authors = ["micro-ml contributors"]
description = "A tiny, blazing-fast WASM-powered regression library"
license = "MIT"
repository = "https://github.com/your-username/micro-ml"
keywords = ["machine-learning", "regression", "wasm", "statistics"]
categories = ["wasm", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Better error messages in debug builds
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
